--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
-    <meta http-equiv="pragma" content="no-cache">
-    <meta http-equiv="cache-control" content="no-cache">
-    <meta http-equiv="expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=0.70, user-scalable=no">
 	<title></title>
     <link rel="shortcut icon" href="./favicon.ico">
-	<link rel="stylesheet" type="text/css" href="/index.css?v=20190616">
+	<link rel="stylesheet" type="text/css" href="/index.css?v=20190619">
 </head>
 
 <body>
-    <div id="app" style="width:100%;height:100%;"></div>
+    <div id="app"></div>
 
     <script src="/lib/dicts.js?v=1.4"></script>
     <script src="/lib/utils/signals.min.js"></script>
