--- a/public/statics/manual.html
+++ b/public/statics/manual.html
@@ -27,6 +27,8 @@
         <li>要展开或收缩左侧导航菜单，请点击头部。</li>
         <li>要查看新的数据，不必刷新<strong>整个网页</strong>，请点击<strong>模块页面</strong>中类似"查询"或刷新的按钮，就可以查询新的数据。
         确实要刷新<strong>模块页面</strong>，请先关闭标签页（非浏览器的标签页），然后在左侧导航菜单中重新打开。</li>
+        <li>Esc 为关闭标签页/退出快捷键。</li>
+        <li>点击一个标签页之后，按方向键可移动选择。</li>
       </ul>
 
       <a href="javascript:window.close()">返回</a>
